--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 # ######################################################################### #
 # 			       **God Mode**				    #
 # 									    #
-# Direct Contributors - Xoomdev, R2DoesInc, Linuxmotion, Romanbb, Sbrissen  #
+# Direct Contributors - Xoomdev, R2DoesInc, Linuxmotion, Romanbb, Sbrissen, cipsgokhle  #
 # ######################################################################### #
 
 Provides access to customization features and the package update utility.
