--- a/README
+++ b/README
@@ -1,8 +1,8 @@
-# ######################################################################### #
-# 			       **God Mode**				    #
-# 									    #
-# Direct Contributors - Xoomdev, R2DoesInc, Linuxmotion, Romanbb, Sbrissen, cipsgokhle  #
-# ######################################################################### #
+# ######################################################################################
+# 			       **God Mode**				    #                                                      #    
+# 									    #                                                                       # 
+# Direct Contributors - Xoomdev, R2DoesInc, Linuxmotion, Romanbb, Sbrissen, cipsgokhle #
+# ######################################################################################
 
 Provides access to customization features and the package update utility.
 The update utility work with clockworkmod.
